--- a/GDGRAP Playbook/GDGRAP Playbook.vcxproj
+++ b/GDGRAP Playbook/GDGRAP Playbook.vcxproj
@@ -141,8 +141,10 @@
   <ItemGroup>
     <ClCompile Include="glad.c" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Model.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Model.h" />
     <ClInclude Include="tiny_obj_loader.h" />
   </ItemGroup>
   <ItemGroup>
