--- a/GDGRAP Playbook/GDGRAP Playbook.vcxproj
+++ b/GDGRAP Playbook/GDGRAP Playbook.vcxproj
@@ -143,9 +143,25 @@
     <ClCompile Include="glad.c" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Model.cpp" />
+    <ClCompile Include="Physics\DragForceGenerator.cpp" />
+    <ClCompile Include="Physics\ForceGenerator.cpp" />
+    <ClCompile Include="Physics\ForceRegistry.cpp" />
+    <ClCompile Include="Physics\GravityForceGenerator.cpp" />
+    <ClCompile Include="Physics\MyVector.cpp" />
+    <ClCompile Include="Physics\PhysicsParticle.cpp" />
+    <ClCompile Include="Physics\PhysicsWorld.cpp" />
+    <ClCompile Include="RenderParticle.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Model.h" />
+    <ClInclude Include="Physics\DragForceGenerator.h" />
+    <ClInclude Include="Physics\ForceGenerator.h" />
+    <ClInclude Include="Physics\ForceRegistry.h" />
+    <ClInclude Include="Physics\GravityForceGenerator.h" />
+    <ClInclude Include="Physics\MyVector.h" />
+    <ClInclude Include="Physics\PhysicsParticle.h" />
+    <ClInclude Include="Physics\PhysicsWorld.h" />
+    <ClInclude Include="RenderParticle.h" />
     <ClInclude Include="stb_image.h" />
     <ClInclude Include="tiny_obj_loader.h" />
   </ItemGroup>
